# schoolnet

./: .agent-run.sh  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  Dockerfile  However, let me double-check the `storage.py` file to ensure it's correct. The file already has  Makefile  README.md  docker-compose.yml  file:schoolnet_test  gunicorn.conf.py  package-lock.json  package.json  pyproject.toml  sitecustomize.py  tailwind.config.js
.claude/: settings.json
.claude/hooks/: block-dangerous.sh  enforce-quality.sh  post-edit-lint.sh
.claude/rules/: security.md  services.md  templates.md
.github/workflows/: ci.yml
.seabone/: MEMORY.md  SOUL.md  backlog.json  config.json  conflict-state.json  docs-state.json
alembic/: env.py
alembic/versions/: 002_billing_schema.py  003_file_uploads.py  004_notifications.py  005_schoolnet_schema.py  006_add_sessions_person_id_index.py  006_schema_hardening.py  007_branding_domain.py  008_featured_schools.py  009_audit_event_indexes.py  010_auth_person_id_indexes.py  011_wards_table.py  012_ads_table.py  013_ad_budget_columns.py  014_admissions_management.py  015_exam_reg_status.py  016_proximity_checklist.py  017_seed_reminder_task.py  018_backfill_username.py  799a0ecebdd4_initial_schema.py
app/: celery_app.py  celery_scheduler.py  config.py  db.py  errors.py  logging.py  main.py  observability.py  telemetry.py  templates.py  web_home.py
app/api/: admission_forms.py  applications.py  audit.py  auth.py  auth_flow.py  billing.py  file_uploads.py  notifications.py  payments.py  persons.py  rbac.py  scheduler.py  schools.py  settings.py  ws.py
app/middleware/: csrf.py  rate_limit.py  security_headers.py
app/models/: __init__.py  ad.py  admissions.py  audit.py  auth.py  billing.py  domain_settings.py  encrypted_types.py  file_upload.py  notification.py  person.py  rbac.py  scheduler.py  school.py  ward.py
app/schemas/: ad.py  admissions.py  auth.py  auth_flow.py  billing.py  common.py  file_upload.py  notification.py  scheduler.py  school.py  settings.py  ward.py
docs/: CODE_REVIEW.md  ui-capture.md  ui-ux-audit-2026-03-04-wave2.md  ui-ux-remediation-2026-03-05.md
scripts/: analyst.sh  batch-tasks.sh  capture_schoolnet_auth.mjs  check-agents.sh  ci-monitor.sh  cleanup-worktrees.sh  conflict-detector.sh  coordinator.sh  deps-agent.sh  docs-agent.sh  fleet.json  json-lock.sh  list-tasks.sh  metrics-agent.sh  notify-telegram.sh  orchestrator.sh  pm-agent.sh  review-pr.sh  rollback-agent.sh  rotate_local_secrets.py  seabone.sh  seed_billing.py  seed_demo_data.py  seed_rbac.py  seed_schoolnet.py  sentinel.sh  settings_sync.py  settings_validate.py  spawn-agent.sh
src/: input.css
templates/: base.html  branding.html  index.html
tests/: conftest.py  test_admission_form_service.py  test_admissions.py  test_api_audit.py  test_api_auth_flow.py  test_api_billing.py  test_api_file_uploads.py  test_api_notifications.py  test_api_payments.py  test_api_persons.py  test_api_rbac.py  test_api_scheduler.py  test_api_settings.py  test_api_ws.py  test_application_document_upload.py  test_application_service.py  test_audit_middleware.py  test_auth_dependencies.py  test_auth_flow.py  test_auth_flow_cookies.py  test_auth_schemas.py  test_auth_services.py  test_avatar_services.py  test_billing_models.py  test_billing_services.py  test_branding_assets.py  test_branding_context.py  test_branding_service.py  test_config_validation.py  test_core_services_extra.py  test_csrf_middleware.py  test_domain_settings_services.py  test_dynamic_form_fields.py  test_email_services.py  test_error_responses.py  test_file_upload_service.py  test_gunicorn_config.py  test_notification_service.py  test_pagination.py  test_parent_notifications.py  (+29 more)
(+201 files in other folders)
